# Ethertia

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  README.md  build_darwin.command  build_windows.bat  settings.json
.github/: launch.vs.json  linux.yml  windows-msvc.yml
.github/workflows/: cmake.yml  darwin-arm64.yml  darwin.yml  macos.yml  windows-msvc.yml  windows.yml
.github/workflows2/: darwin.yml  macos.yml  windows.yml
enc_temp_folder/38367e784c69afc130abf04fad35c0e3/: ImwInspector.cpp
include/glad/: glad.h
lib/_deprecated/: NoiseGeneratorOctaves.h
lib/_misc/_dep/: Model.h  TextureAtlas.h
lib/_misc/_depreca/: depcode.txt
lib/_misc/_todo/: VertexData.h
lib/_misc/bullet3/: CMakeLists.txt
lib/_misc/eldaria/: Window.h
lib/_misc/glad33/: glad.c
lib/_misc/json-simpleson-1.1.0/: .gitignore  CMakeLists.txt  LICENSE  README.md  appveyor.yml  doxygen.txt  json.cpp  json.h  release_checklist.md
lib/_misc/json-simpleson-1.1.0/.github/workflows/: codeql-analysis.yml
lib/_misc/json-simpleson-1.1.0/examples/: CMakeLists.txt
lib/_misc/json-simpleson-1.1.0/issues/: CMakeLists.txt
lib/_misc/json-simpleson-1.1.0/test/: CMakeLists.txt  jobject.cpp  test.h
lib/_misc/jsonmeo-0.23.8/: .gitignore  CMakeLists.txt  LICENSE  README.md  README_en.md
lib/_misc/jsonmeo-0.23.8/.github/workflows/: ci.yml
lib/_misc/jsonmeo-0.23.8/benchmark/: benchmark.cpp
lib/_misc/jsonmeo-0.23.8/include/: json.hpp  json5.hpp
lib/_misc/jsonmeo-0.23.8/sample/: json5_parse.cpp  sample.cpp
lib/_misc/libui/: CMakeLists.txt
lib/_misc/nbt/: .gitignore  CMakeLists.txt  README.md
lib/_misc/nbt-cpp/: .gitignore  .gitlab-ci.yml  LICENSE  README.md  gcovr.cfg  meson.build
lib/_misc/nbt-cpp/.devcontainer/: .bashrc  Dockerfile  devcontainer.json
lib/_misc/nbt-cpp/.devcontainer/meson/cross/: arm-linux-gnueabihf  x86_64-alpine-linux-musl  x86_64-linux-gnu  x86_64-w64-mingw32
lib/_misc/nbt-cpp/include/: meson.build
lib/_misc/nbt-cpp/src/: meson.build  nbtc.cpp
lib/_misc/nbt-cpp/test/: issue2.cpp  issue3.cpp  meson.build  nbt.cpp  test.hpp
lib/_misc/nbt/include/nbt/: endian_str.h  nbt_export.h  nbt_tags.h  nbt_visitor.h  tag_array.h  tag_list.h  tag_primitive.h  tag_string.h  value.h  value_initializer.h
lib/_misc/nbt/include/nbt/io/: izlibstream.h  ozlibstream.h  stream_writer.h
lib/_misc/nbt/include/nbt/text/: json_formatter.h
lib/_misc/nbt/src/: tag_array.cpp  tag_string.cpp
lib/_misc/nbt/src/io/: stream_writer.cpp
lib/_misc/nbt/test/: CMakeLists.txt  nbttest.h  read_test.h  write_test.h  zlibstream_test.h
lib/_misc/nbt/test/testfiles/: bigtest.nbt  bigtest.zlib  bigtest_corrupt.nbt  bigtest_eof.nbt  trailing_data.zlib
lib/bullet3/: CMakeLists.txt
lib/fastnoise2/: CMakeLists.txt
lib/glfw-3.3.8/: CMakeLists.txt
lib/imgui-docking/: imgui_draw.cpp
lib/imgui-docking-1.89.9/: imgui.h  imgui_draw.cpp  imgui_internal.h  imgui_widgets.cpp
lib/imgui-docking-1.89.9/backends/: imgui_impl_glfw.cpp  imgui_impl_glfw.h
lib/imgui-docking/backends/: imgui_impl_glfw.cpp  imgui_impl_glfw.h
lib/imgui-imnodes-0.5/: imnodes.cpp
lib/imgui-imnodes/example/: color_node_editor.cpp
lib/imgui-knobs-0.21.2/: imgui-knobs.cpp
lib/imgui-profiler-0.23.10/: .gitignore  ImProfiler.h  LICENSE  Profiler.cpp  ProfilerWindow.cpp  README.md  main.cpp
lib/imguizmo/: ImGuizmo.cpp
lib/imguizmo-1.83/: ImGuizmo.h
lib/jolt-3.0.1/HelloWorld/: HelloWorld.cpp
lib/libui/: CMakeLists.txt
lib/msgpack/: CMakeLists.txt  README.md
lib/msgpack-cppack19/: .travis.yml
lib/msgpack-cppack19/tests/: CMakeLists.txt  main.cpp  object_packing_tests.cpp  type_packing_tests.cpp
lib/msgpack/cmake/: MsgpackConfig.cmake.in
lib/msgpack/tests/: error_handling.cpp  examples.cpp
lib/nbt/src/: endian_str.cpp  tag.cpp  tag_compound.cpp  tag_list.cpp  value.cpp  value_initializer.cpp
lib/nbt/test/: endian_str_test.h  format_test.cpp
lib/openvr/src/: openvr_api_public.cpp
lib/openxr-hpp-1.0.21/: Doxyfile  OPENXR-HPP.md  README.md
lib/sol2-3.3.0/: .dockerignore  .gitignore
lib/wgpu-0.18.0.1/: CMakeLists.txt
lib/wgpu-0.18.0.1/glfw3wgpu-1.1.0/: CMakeLists.txt  glfw3webgpu.c  glfw3webgpu.h
run/: Ethertia  imgui.ini  imgui2.ini  run_darwin.command  run_darwin.sh  run_linux.sh  run_osx.sh  run_windows.bat  server.json  settings.json  test.nbt  test.txt
run/assets/docs/: LICENSE-old.txt
run/assets/shaders/: def_compose.frag  def_compose.frag.spv  def_compose.vert  def_compose.vert.spv  def_gbuffer.frag  def_gbuffer.frag.spv  def_gbuffer.vert  def_gbuffer.vert.spv  util.h
run/assets/shaders-vk/: def_compose.frag  def_compose.vert  def_gbuffer.frag  def_gbuffer.tesc  def_gbuffer.tese  def_gbuffer.vert
run/assets/sky/: skybox.json
run/cache/mtl_mesh/: stool.vbuf
run/logs/: 2023-01-04_22.45.10.txt  win-glDebugMessage.txt
run/mods/: wgpu_demo.cpp  关于可以应用到以太效应中的流体模拟的一种方案.txt
run/mods/TwilightForest/: CMakeLists.txt  mod.json
run/mods/_/: conf.yml
run/proc/macos-x86-64/: libBulletCollision.3.25.dylib  libBulletDynamics.3.25.dylib
src/assets/elytra/: include.txt  main.et  upg_briefeval.txt
src/assets/entity/: bulletcar.mtl
src/eldaria/: BitmapImage.h  DebugStat.h  Eldaria.cpp  Imgui.cpp  Imgui.h  Loader.cpp  Loader.h  Vulkan.cpp  VulkanIntl.cpp  VulkanIntl.h  Window.h
src/eldaria/imgui/: Imgui.cpp  Imgui.h  Imgui_Intl_Impl.cpp
src/eldaria/shaders/: compose.frag  compose.vert  geometry.frag  geometry.vert  test.frag
src/eldaria/util/: Loader.cpp  Loader.h
src/eldaria/vulkan/: VertexBuffer.h  VulkanIntl.cpp  VulkanIntl.h  vkh.cpp  vkh.h
src/eldaria/world/: World.h
src/ethertia/: Ethertia.cpp  Ethertia.h  core.h  main.cpp
src/ethertia-old/: ImwProfiler.cpp
src/ethertia-old/entity/: Entity.h  EntityLantern.h  EntityMesh.h  EntityTorch.h
src/ethertia-old/util/: OBJLoader.h  Profiler.h  Scheduler.h  Strings.cpp
src/ethertia-old/world/: Biome.h  Cell.h  ChunkLoader.h  Octree.h  World.h  World2.h
src/stdx/: collection.h  object_pool.h  stdx.h  str.cpp  str.h  thread_pool.cpp  thread_pool.h
src/test/: test.cpp
src/vkx/: vkx.cpp  vkx.hpp
(+899 files in other folders)
